--- a/front/index.html
+++ b/front/index.html
@@ -158,7 +158,7 @@
                   <div class="col-xl-8">
                     <div class="border-right">
                       <div class="card-header justify-content-between py-5">
-                        <h2>User Activity</h2>
+                        <h2>Water change</h2>
                         <div class="date-range-report ">
                           <span></span>
                         </div>
@@ -215,11 +215,11 @@
                         </div>
                       </div>
                       <div class="card-footer d-flex flex-wrap bg-white border-top">
-                        <a href="#" class="text-uppercase py-3">Audience Overview</a>
+                        <a href="#" class="text-uppercase py-3">Water state change</a>
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-4">
+                  <!-- <div class="col-xl-4">
                     <div data-scroll-height="642">
                       <div class="card-header pt-5 flex-column align-items-start">
                         <h4 class="text-dark mb-4">Current Users</h4>
@@ -235,7 +235,7 @@
                       <div class="card-footer d-flex flex-wrap bg-white border-top">
                         <a href="#" class="text-uppercase py-3">Audience Overview</a>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -331,8 +331,8 @@
             </div>
             <div class=" col-xl-4 ">
             </div>
-            <div class=" col-xl-4 ">
-              <!-- Notification Table -->
+            <!-- <div class=" col-xl-4 ">
+              -- Notification Table 
               <div class="card card-default" data-scroll-height="580">
                 <div class="card-header justify-content-between">
                   <h2>Latest Notifications</h2>
@@ -430,7 +430,7 @@
                 </div>
                 <div class="mt-3"></div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="right-sidebar-2">
