--- a/front/index.html
+++ b/front/index.html
@@ -175,18 +175,21 @@
                               <i class="mdi mdi-arrow-up-bold"></i>
                             </span>
                           </a> 
+                          
                         </li>
-                       <!--    <li class="nav-item">
+                       <li class="nav-item">
                           <a class="nav-link active pb-md-0" data-toggle="tab" href="#user" role="tab" aria-controls=""
                             aria-selected="true">
-                            <span class="type-name">Water change</span>
-                            <h4 class="d-inline-block mr-2 mb-3">638</h4>
-                            <span class="text-success ">20%
-                              <i class="mdi mdi-arrow-up-bold"></i>
+                            <span class="type-name">Station</span>
+                            <span class="text-success ">
+                                <select id="dropdown">
+                                  <option value="GŁOGÓW" class="d-inline-block mr-2 mb-3">GŁOGÓW</option>
+                                  <option value="RACIBÓRZ-MIEDONIA" class="d-inline-block mr-2 mb-3">RACIBÓRZ-MIEDONIA</option>
+                                </select>
                             </span>
                           </a>
                         </li>
-                      <li class="nav-item">
+                     <!--    <li class="nav-item">
                           <a class="nav-link pb-md-0" data-toggle="tab" href="#bounce" role="tab" aria-controls=""
                             aria-selected="false">
                             <span class="type-name">Bounce Rate</span>
@@ -468,7 +471,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCn8TFXGg17HAUcNpkwtxxyT9Io9B_NcM" defer></script>
   <script src="assets/js/sleek.bundle.js"></script>
   <script src="assets/js/our.js"></script>
-
+  
+  
 </body>
 
 </html>
