--- a/front/index.html
+++ b/front/index.html
@@ -162,7 +162,7 @@
                         <div class="station">
                           <span class="type-name">Station</span>
                             <span class="text-success">
-                                <select class="select2-container--default" id="dropdown">
+                                <select class="form-control custom-select" id="dropdown">
                                   <option value="GŁOGÓW" class="d-inline-block mr-2 mb-3">GŁOGÓW</option>
                                   <option value="RACIBÓRZ-MIEDONIA" class="d-inline-block mr-2 mb-3">RACIBÓRZ-MIEDONIA</option>
                                 </select>
@@ -215,7 +215,7 @@
                   <div class="col-md-12">
                     <div class="card card-default">
                       <div class="card-header card-header-border-bottom">
-                        <h2>Multiple Marker Map</h2>
+                        <h2>Stations position</h2>
                       </div>
                       <div class="card-body">
                         <div id="multiMarkerMap" class="map-container"></div>
@@ -331,6 +331,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCn8TFXGg17HAUcNpkwtxxyT9Io9B_NcM" defer></script>
   <script src="assets/js/sleek.bundle.js"></script>
   <script src="assets/js/our.js"></script>
+  <script src="assets/js/map.js"></script>
   
   
 </body>
