--- a/front/index.html
+++ b/front/index.html
@@ -163,8 +163,8 @@
                           <span class="type-name">Station</span>
                             <span class="text-success">
                                 <select class="form-control custom-select" id="dropdown">
-                                  <option value="GŁOGÓW" class="d-inline-block mr-2 mb-3">GŁOGÓW</option>
-                                  <option value="RACIBÓRZ-MIEDONIA" class="d-inline-block mr-2 mb-3">RACIBÓRZ-MIEDONIA</option>
+                                  <option value="151160060" class="d-inline-block mr-2 mb-3">GŁOGÓW</option>
+                                  <option value="150180060" class="d-inline-block mr-2 mb-3">RACIBÓRZ-MIEDONIA</option>
                                 </select>
                             </span>
                             <span class="text-success ">5%
