--- a/front/index.html
+++ b/front/index.html
@@ -260,6 +260,7 @@
     </div>
   </div>
 
+
   <script src="assets/plugins/jquery/jquery.min.js"></script>
   <script src="assets/plugins/slimscrollbar/jquery.slimscroll.min.js"></script>
   <script src="assets/plugins/jekyll-search.min.js"></script>
@@ -268,11 +269,10 @@
   <script src="assets/plugins/jvectormap/jquery-jvectormap-world-mill.js"></script>
   <script src="assets/plugins/daterangepicker/moment.min.js"></script>
   <script src="assets/plugins/daterangepicker/daterangepicker.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrnzJvDM1J_v1Wh7pzHQqE1pEIHDehMWM" defer></script>
   <script src="assets/js/sleek.bundle.js"></script>
   <script src="assets/js/our.js"></script>
   <script src="assets/js/map.js"></script>
-  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrnzJvDM1J_v1Wh7pzHQqE1pEIHDehMWM&callback=initMap&v=weekly"></script>
   
 </body>
 
